# AMASE

./: .gitignore  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  amase.py  amase_utils.py  assign_lines.py  assignment_algorithm.py  dataset_creation.py  environment.yml  example_config.yaml  example_notebook.ipynb  fit_model.py  hyperparameters_optimize.py  molsim.py  molsim_classes.py  molsim_utils.py  output_text_file.py  pyproject.toml  requirements.txt  setup.py  user_input.py
amase/: __init__.py  amase.py  amase_utils.py  assign_lines.py  config.py  dataset_creation.py  environment.yml  fit_model.py  fit_model_old.py  main.py  molsim.py  molsim_classes.py  molsim_utils.py  output_text_file.py  requirements.txt  user_input.py
amase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example_local_catalogs/: local_metadata.csv
