[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "amase"
version = "0.1.0"
description = "AMASE Mixture Analysis Algorithm for rotational spectroscopy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zachary Fried", email = "zfried@mit.edu"}
]
license = {file = "amase/LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "bokeh>=3.0",
    "rdkit",
    "numba",
    "astropy",
    "fastdist",
    "gensim",
    "pyyaml",
    "mol2vec @ git+https://github.com/samoturk/mol2vec",
]

[project.urls]
Homepage = "https://github.com/zfried/AMASE"
