[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "amase"
version = "0.1.0"
description = "AMASE Mixture Analysis Algorithm for rotational spectroscopy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zachary Fried", email = "zfried@mit.edu"}
]
license = {file = "amase/LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scipy==1.17.1",
    "bokeh==3.9.0",
    "rdkit==2025.9.6",
    "numba==0.64.0",
    "astropy==7.2.0",
    "fastdist==1.1.6",
    "gensim==4.4.0",
    "pyyaml==6.0.3",
    "mol2vec @ git+https://github.com/samoturk/mol2vec",
]

[project.urls]
Homepage = "https://github.com/zfried/AMASE"
